--- a/.github/workflows/bindings-regeneration.yml
+++ b/.github/workflows/bindings-regeneration.yml
@@ -16,7 +16,8 @@ jobs:
         token: ${{ secrets.PUSHABLE_GITHUB_TOKEN }}
     - name: Checkout submodules, configure git.
       run: |
-          git -c submodule.third_party/git-hooks.update=none submodule update --init --recursive
+          # Keep this in sync with generator.json!
+          git -c submodule.third_party/git-hooks.update=none submodule update --init --recursive --depth 0 build/submodules/Vulkan-Headers build/submodules/Assimp build/submodules/SDL build/submodules/webgpu-headers build/submodules/wgpu-native build/submodules/dawn build/submodules/SPIRV-Headers build/submodules/SPIRV-Reflect build/submodules/SPIRV-Cross build/submodules/shaderc
           git config --local user.email "9011267+dotnet-bot@users.noreply.github.com"
           git config --local user.name "The Silk.NET Automaton"
     - name: Setup .NET Core
