--- a/sources/Windowing/Windowing/Silk.NET.Windowing.csproj
+++ b/sources/Windowing/Windowing/Silk.NET.Windowing.csproj
@@ -8,8 +8,8 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\Core\Core\Silk.NET.Core.csproj" />
+      <ProjectReference Include="..\..\Maths\Maths\Silk.NET.Maths.csproj" />
       <ProjectReference Include="..\..\SDL\SDL\Silk.NET.SDL.csproj" />
-      <ProjectReference Include="..\Common\Silk.NET.Windowing.Common.csproj" />
     </ItemGroup>
 
   <ItemGroup>
