--- a/sources/Windowing/Windowing/Silk.NET.Windowing.csproj
+++ b/sources/Windowing/Windowing/Silk.NET.Windowing.csproj
@@ -4,6 +4,7 @@
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <NoWarn>0067</NoWarn> <!-- TODO -->
     </PropertyGroup>
 
     <ItemGroup>
