--- a/sources/Playground/Playground.csproj
+++ b/sources/Playground/Playground.csproj
@@ -10,6 +10,7 @@
     <ItemGroup>
       <ProjectReference Include="..\OpenGL\OpenGL\Silk.NET.OpenGL.csproj" />
       <ProjectReference Include="..\SDL\SDL\Silk.NET.SDL.csproj" />
+      <ProjectReference Include="..\Windowing\Windowing\Silk.NET.Windowing.csproj" />
     </ItemGroup>
 
     <Import Project="../Core/Core/Silk.NET.Core.targets" />
