--- a/.gitignore
+++ b/.gitignore
@@ -475,7 +475,7 @@ src/**/build/
 *.gen.txt
 
 # Silk.NET Website Generation Output
-/docs/
+#/docs/
 src/Website/Silk.NET.Statiq/temp
 src/Website/Silk.NET.Statiq/cache
 
