--- a/sources/Core/Core/Silk.NET.Core.csproj
+++ b/sources/Core/Core/Silk.NET.Core.csproj
@@ -18,6 +18,15 @@
     <PackageReference Include="InlineIL.Fody" Version="1.9.0" PrivateAssets="all" />
   </ItemGroup>
 
+  <!-- Public API Tracking -->
+  <PropertyGroup>
+    <SilkTrackPublicAPI>true</SilkTrackPublicAPI>
+  </PropertyGroup>
+  <ItemGroup Condition="'$(TargetFramework)' != ''">
+    <AdditionalFiles Include="PublicAPI/$(TargetFramework)/PublicAPI.Shipped.txt" />
+    <AdditionalFiles Include="PublicAPI/$(TargetFramework)/PublicAPI.Unshipped.txt" />
+  </ItemGroup>
+
   <!-- Dogfooding -->
   <Import Project="Silk.NET.Core.targets" />
 
