--- a/sources/Maths/Maths/Silk.NET.Maths.csproj
+++ b/sources/Maths/Maths/Silk.NET.Maths.csproj
@@ -11,7 +11,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.CodeAnalysis.PublicApiAnalyzers" Version="3.3.4">
+      <PackageReference Include="Microsoft.CodeAnalysis.PublicApiAnalyzers">
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
