--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -3,6 +3,13 @@ on:
     push:
     pull_request:
     merge_group:
+    workflow_dispatch:
+      inputs:
+        release:
+          description: "Release to NuGet"
+          required: false
+          type: boolean
+          default: false
 permissions:
     statuses: write
     checks: write
@@ -27,7 +34,7 @@ jobs:
                 Pack
                 --configuration Release
                 --msbuild-properties
-                VersionSuffix=${{ github.event_name != 'pull_request' && format('build{0}.0', github.run_number) || format('pr{0}.{1}', github.event.number, github.run_number) }}
+                ${{ github.event_name == 'workflow_dispatch' && inputs.release && '' || github.event_name != 'pull_request' && format('VersionSuffix=build{0}.0', github.run_number) || format('VersionSuffix=pr{0}.{1}', github.event.number, github.run_number) }}
                 ContinuousIntegrationBuild=true
             - name: Upload Unsigned Artifacts to Actions
               uses: actions/upload-artifact@v4
@@ -81,6 +88,7 @@ jobs:
                 name: coverage-${{ matrix.name }}
                 path: ./coverage/**/coverage.cobertura.xml
     Report-Coverage:
+        name: "Report Coverage"
         runs-on: ubuntu-latest
         needs: Test
         permissions:
@@ -107,3 +115,26 @@ jobs:
               with:
                 path: coveragereport/Cobertura.xml
                 minimum_coverage: 0
+    Release:
+        runs-on: windows-latest
+        if: ${{ github.event_name == 'workflow_dispatch' && inputs.release }}
+        needs: [Build, Test]
+        environment: Release
+        steps:
+          - uses: actions/checkout@v3
+          - uses: actions/download-artifact@v3
+            with:
+              path: "artifacts/**/*nupkg"
+          - name: Push to NuGet
+            if: ${{ github.repository == 'dotnet/Silk.NET' }}
+            run: >-
+              ./build.sh SignPackages PushToNuGet FinishRelease --skip Clean Compile Pack
+              --nuget-api-key ${{ secrets.GITHUB_TOKEN }}
+              --akv-certificate ${{ secrets.AKV_CERTIFICATE }}
+              --akv-client-id ${{ secrets.AKV_CLIENT_ID }}
+              --akv-client-secret ${{ secrets.AKV_CLIENT_SECRET }}
+              --akv-tenant ${{ secrets.AKV_TENANT }}
+              --akv-vault-url ${{ secrets.AKV_VAULT_URL }}
+              --discord-webhook ${{ secrets.DISCORD_ANNOUNCEMENT_WEBHOOK }}
+            env:
+              SILK_ACTIONS_DEPLOY_KEY: ${{ secrets.SILK_ACTIONS_DEPLOY_KEY }}
