Prepare for a release dry run

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -83,7 +83,7 @@ jobs:
                 path: ./coverage/**/*.trx
                 reporter: dotnet-trx
             - name: Upload Coverage Results
-              uses: actions/upload-artifact@v3
+              uses: actions/upload-artifact@v4
               with:
                 name: coverage-${{ matrix.name }}
                 path: ./coverage/**/coverage.cobertura.xml
@@ -95,7 +95,7 @@ jobs:
             pull-requests: write
             checks: write
         steps:
-            - uses: actions/download-artifact@v3
+            - uses: actions/download-artifact@v4
               with:
                 path: ./coverage
             - name: Setup .NET Core
@@ -122,13 +122,13 @@ jobs:
         environment: Release
         steps:
           - uses: actions/checkout@v3
-          - uses: actions/download-artifact@v3
+          - uses: actions/download-artifact@v4
             with:
               path: "artifacts/**/*nupkg"
           - name: Push to NuGet
             if: ${{ github.repository == 'dotnet/Silk.NET' }}
             run: >-
-              ./build.sh SignPackages PushToNuGet FinishRelease --skip Clean Compile Pack
+              .\build.cmd SignPackages PushToNuGet FinishRelease --skip Clean Compile Pack
               --nuget-api-key ${{ secrets.GITHUB_TOKEN }}
               --akv-certificate ${{ secrets.AKV_CERTIFICATE }}
               --akv-client-id ${{ secrets.AKV_CLIENT_ID }}
@@ -138,3 +138,10 @@ jobs:
               --discord-webhook ${{ secrets.DISCORD_ANNOUNCEMENT_WEBHOOK }}
             env:
               SILK_ACTIONS_DEPLOY_KEY: ${{ secrets.SILK_ACTIONS_DEPLOY_KEY }}
+          - name: Upload Signed Artifacts to Actions
+            uses: actions/upload-artifact@v4
+            with:
+              name: signed_nupkgs
+              path: "artifacts/**/*nupkg"
+              if-no-files-found: warn
+              retention-days: 30
